# drawings-gallery

./: pyproject.toml
zeichnungsgallerie/: __main__.py
zeichnungsgallerie/static/: filter.js
zeichnungsgallerie/templates/: index.html.j2
