[tool.poetry]
name = "zeichnungsgallerie"
version = "0.1.0"
description = ""
authors = ["Martin Ueding <mu@martin-ueding.de>"]
license = "MIT"
# readme = "README.md"


[tool.poetry.scripts]
zeichnungsgallerie = "zeichnungsgallerie.__main__:main"


[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"
pandas = "^2.2.2"
odfpy = "^1.4.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
